# indeed-parser

./: .env.example  .gitignore  README.md  config.example.py  main.py  pyproject.toml  scrapy.cfg
config/: __init__.py
crawler/: pipelines.py  settings.py
crawler/middlewares/: proxy.py  session.py
crawler/queries/: searchjobs.graphql
crawler/spiders/: indeed_basic.py
crawler/utils/: auth.py  captcha_solver.py  graphql.py  parser.py  query_manager.py  temp_mail.py
indeed_scraper/: config.py  items.py  middlewares.py  pipelines.py  playfox_handler.py  scraper.py  session.py  settings.py
indeed_scraper/queries/: viewjob.graphql
indeed_scraper/spiders/: indeed_basic.py
indeed_scraper/utils/: __init__.py  auth.py  captcha_solver.py  cf_solver.py  graphql.py  indeed_graphql.py  temp_mail.py
scraperkit/: logger.py  types.py
scraperkit/utils/: loader.py  runner.py
scripts/: generate_accounts.py
