[project]
name = "indeed-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "camoufox>=0.4.0",
    "camoufox-captcha>=0.1.3",
    "faker>=37.0.0",
    "httpx>=0.28.0",
    "playwright>=1.60.0",
    "playwright-captcha>=0.1.5",
    "pydantic-settings>=2.0.0",
    "scrapy>=2.13.4",
    "structlog>=24.0.0",
]

# -------------------------
# Ruff Configuration
# -------------------------
[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "S", "C90", "N", "ANN", "ASYNC", "T20"]
ignore = ["E501"]
extend-select = ["RUF100"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**" = ["S101"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "sqlalchemy.orm.declared_attr",
    "sqlalchemy.orm.declared_attr.directive",
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
